modified with rem

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="custom">
             <div class="clubs">
                 <h1>custom clubs built just for you</h1>
-                <h3>beter sports starts now</h3>
+                <h3>better sports starts now</h3>
                 <div class="shop"><p>shop custom clubs</p></div>
             </div>
             <div class="fit">
